<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginView"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textSize="40dp"/>

    <ImageView
        android:id="@+id/coinImageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:src="@drawable/coinpile"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/coinImageTitle"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/enter_username"
        android:background="@color/lightBeige"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_centerInParent="true"
        android:background="@color/lightBeige"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/Remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/remember_me"
        android:layout_marginTop="5dp"
        android:onClick="OnRememberMe" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Remember"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/createAcntBtn"
        android:layout_alignRight="@id/createAcntBtn"
        android:onClick="onLogin"
        android:layout_marginTop="15dp"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/createAcntBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:onClick="onCreateAccount"
        android:layout_marginTop="15dp"
        android:text="@string/create_account_button" />

</RelativeLayout>